fix z-index on links so they are clickable

--- a/src/app/scss/nav.scss
+++ b/src/app/scss/nav.scss
@@ -18,6 +18,7 @@
 .social_link_container {
   margin-right: 10px;
   width: clamp(30px, 3vw, 35px);
+  z-index: 9999;
 }
 
 .social_link {
